--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-toastify": "^9.1.3",
     "recharts": "^2.8.0",
     "sass": "^1.68.0",
+    "sweetalert2": "^11.7.32",
     "uuid": "^9.0.1",
     "yup": "^1.2.0"
   },
