--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "recharts": "^2.8.0",
     "sass": "^1.68.0",
